@@ -478,17 +478,14 @@ block|}
 name|sortBuckets
 argument_list|()
 expr_stmt|;
-name|int
+name|long
 name|first
 init|=
-operator|(
-name|int
-operator|)
 name|freq
 operator|.
 name|offset
 decl_stmt|;
-name|int
+name|long
 name|end
 init|=
 name|freq
@@ -510,7 +507,7 @@ name|Integer
 operator|.
 name|MAX_VALUE
 decl_stmt|;
-name|int
+name|long
 name|last
 init|=
 name|Math
@@ -541,11 +538,14 @@ name|max
 argument_list|(
 literal|0
 argument_list|,
-operator|(
+call|(
+name|int
+call|)
+argument_list|(
 name|last
 operator|-
 name|first
-operator|)
+argument_list|)
 argument_list|)
 argument_list|)
 decl_stmt|;
