@@ -1124,48 +1124,74 @@ name|freq
 operator|.
 name|offset
 decl_stmt|;
-comment|// add a modest amount of over-request if this is a shard request
-specifier|final
-name|int
-name|lim
+name|long
+name|effectiveLimit
 init|=
+name|Integer
+operator|.
+name|MAX_VALUE
+decl_stmt|;
+comment|// use max-int instead of max-long to avoid overflow
+if|if
+condition|(
 name|freq
 operator|.
 name|limit
 operator|>=
 literal|0
-condition|?
-operator|(
+condition|)
+block|{
+name|effectiveLimit
+operator|=
+name|freq
+operator|.
+name|limit
+expr_stmt|;
+if|if
+condition|(
 name|fcontext
 operator|.
 name|isShard
 argument_list|()
-condition|?
-call|(
-name|int
-call|)
-argument_list|(
+condition|)
+block|{
+comment|// add over-request if this is a shard request
+if|if
+condition|(
 name|freq
 operator|.
-name|limit
+name|overrequest
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+name|effectiveLimit
+operator|=
+call|(
+name|long
+call|)
+argument_list|(
+name|effectiveLimit
 operator|*
 literal|1.1
 operator|+
 literal|4
 argument_list|)
-else|:
-operator|(
-name|int
-operator|)
+expr_stmt|;
+comment|// default: add 10% plus 4 (to overrequest for very small limits)
+block|}
+else|else
+block|{
+name|effectiveLimit
+operator|+=
 name|freq
 operator|.
-name|limit
-operator|)
-else|:
-name|Integer
-operator|.
-name|MAX_VALUE
-decl_stmt|;
+name|overrequest
+expr_stmt|;
+block|}
+block|}
+block|}
 specifier|final
 name|int
 name|sortMul
@@ -1184,16 +1210,24 @@ call|(
 name|int
 call|)
 argument_list|(
-name|lim
+name|effectiveLimit
 operator|>=
 literal|0
 condition|?
-operator|(
-name|long
-operator|)
+name|Math
+operator|.
+name|min
+argument_list|(
 name|off
 operator|+
-name|lim
+name|effectiveLimit
+argument_list|,
+name|Integer
+operator|.
+name|MAX_VALUE
+operator|-
+literal|1
+argument_list|)
 else|:
 name|Integer
 operator|.
@@ -1520,7 +1554,7 @@ block|}
 elseif|else
 if|if
 condition|(
-name|lim
+name|effectiveLimit
 operator|>
 literal|0
 condition|)
@@ -1802,7 +1836,7 @@ decl_stmt|;
 assert|assert
 name|collectCount
 operator|<=
-name|lim
+name|effectiveLimit
 assert|;
 name|int
 index|[]
